--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "4/26/2020 1:52AM -JW\r -First Commit",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Jonathan, Daniel, Athena",
   "license": "ISC",
